group stage conclusion

--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -113,6 +113,15 @@
                 <td>2.21</td>
               </tr>
               <tr>
+                <td>Team Bellas</td>
+                <td>4</td>
+                <td>3</td>
+                <td>0</td>
+                <td>1</td>
+                <td>9</td>
+                <td>2.29</td>
+              </tr>
+              <tr>
                 <td>Team Eyes</td>
                 <td>4</td>
                 <td>2</td>
@@ -122,22 +131,13 @@
                 <td>2.18</td>
               </tr>
               <tr>
-                <td>Team Bellas</td>
-                <td>3</td>
-                <td>2</td>
-                <td>0</td>
-                <td>1</td>
-                <td>6</td>
-                <td>1.71</td>
-              </tr>
-              <tr>
                 <td>Team Bust</td>
-                <td>3</td>
+                <td>4</td>
                 <td>1</td>
                 <td>0</td>
-                <td>2</td>
                 <td>3</td>
-                <td>1.42</td>
+                <td>3</td>
+                <td>1.84</td>
               </tr>
               <tr>
                 <td>Team WWE</td>
@@ -176,6 +176,15 @@
                 <td>2.33</td>
               </tr>
               <tr>
+                <td>Team Marvel</td>
+                <td>4</td>
+                <td>3</td>
+                <td>0</td>
+                <td>1</td>
+                <td>9</td>
+                <td>2.36</td>
+              </tr>
+              <tr>
                 <td>Team Victoria's Secret Angels</td>
                 <td>4</td>
                 <td>2</td>
@@ -183,15 +192,6 @@
                 <td>2</td>
                 <td>6</td>
                 <td>2.08</td>
-              </tr>
-              <tr>
-                <td>Team Marvel</td>
-                <td>3</td>
-                <td>2</td>
-                <td>0</td>
-                <td>1</td>
-                <td>6</td>
-                <td>1.73</td>
               </tr>
               <tr>
                 <td>Team Mutants</td>
@@ -204,12 +204,12 @@
               </tr>
               <tr>
                 <td>Team Nose Job</td>
-                <td>3</td>
+                <td>4</td>
                 <td>0</td>
                 <td>0</td>
-                <td>3</td>
+                <td>4</td>
                 <td>0</td>
-                <td>1.27</td>
+                <td>1.64</td>
               </tr>
             </tbody>
           </table>
@@ -260,21 +260,21 @@
               </tr>
               <tr>
                 <td>Team Baby Face</td>
-                <td>3</td>
+                <td>4</td>
                 <td>1</td>
                 <td>0</td>
-                <td>2</td>
                 <td>3</td>
-                <td>1.30</td>
+                <td>3</td>
+                <td>1.80</td>
               </tr>
               <tr>
                 <td>Team Supernatural</td>
+                <td>4</td>
+                <td>1</td>
+                <td>0</td>
                 <td>3</td>
-                <td>0</td>
-                <td>0</td>
                 <td>3</td>
-                <td>0</td>
-                <td>1.14</td>
+                <td>1.64</td>
               </tr>
             </tbody>
           </table>
@@ -295,6 +295,15 @@
             </thead>
             <tbody>
               <tr>
+                <td>Team Bond Girls</td>
+                <td>4</td>
+                <td>4</td>
+                <td>0</td>
+                <td>0</td>
+                <td>12</td>
+                <td>2.55</td>
+              </tr>
+              <tr>
                 <td>Team Emma</td>
                 <td>4</td>
                 <td>3</td>
@@ -302,15 +311,6 @@
                 <td>1</td>
                 <td>9</td>
                 <td>2.25</td>
-              </tr>
-              <tr>
-                <td>Team Bond Girls</td>
-                <td>3</td>
-                <td>3</td>
-                <td>0</td>
-                <td>0</td>
-                <td>9</td>
-                <td>1.85</td>
               </tr>
               <tr>
                 <td>Team Scott Pilgrim v the World</td>
@@ -323,12 +323,12 @@
               </tr>
               <tr>
                 <td>Team Diane</td>
-                <td>3</td>
+                <td>4</td>
                 <td>1</td>
                 <td>0</td>
-                <td>2</td>
                 <td>3</td>
-                <td>1.13</td>
+                <td>3</td>
+                <td>1.43</td>
               </tr>
               <tr>
                 <td>Team Curves</td>
@@ -356,12 +356,12 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br /></div>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Pop Princesses<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Emma<a href=""><span class="score"></span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Bellas<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Bond Girls<a href=""><span class="score"></span></a></li>
               </ul>
             </div>
           </div>
@@ -370,23 +370,23 @@
             <div class="semis-l current">
               <div class="round-details">Semifinals 1 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
               </ul>
             </div>
             <div class="final current">
               <i class="fa fa-trophy"></i>
               <div class="round-details">Finals <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
               </ul>
             </div>
             <div class="semis-r current">
               <div class="round-details">Semifinals 2 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
               </ul>
             </div>
           </div>
@@ -395,12 +395,12 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br /></div>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Petite<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Marvel<a href=""><span class="score"></span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top name-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Got<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Red Heads<a href=""><span class="score"></span></a></li>
               </ul>
             </div>
           </div>
