--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -307,25 +307,25 @@
                                 <td>10</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Bust vs Team Bellas</a></td>
-                                <td></td>
+                                <td>Team Bellas [3-0]</td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Marvel vs Team Nose Job</a></td>
-                                <td></td>
+                                <td>Team Marvel [3-0]</td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Baby Face vs Team Supernatural</a></td>
-                                <td></td>
+                                <td>Team Supernatural [2-1]</td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Bond Girls vs Team Diane</a></td>
-                                <td></td>
+                                <td>Team Bond Girls [3-0]</td>
                             </tr>
                         </tbody>
                     </table>
