--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -370,8 +370,8 @@
             <div class="semis-l current">
               <div class="round-details">Semifinals 1 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Emma<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Petite<a href=""><span class="score"></span></a></li>
               </ul>
             </div>
             <div class="final current">
@@ -385,8 +385,8 @@
             <div class="semis-r current">
               <div class="round-details">Semifinals 2 <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Bond Girls<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Red Heads<a href=""><span class="score"></span></a></li>
               </ul>
             </div>
           </div>
