--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -378,8 +378,8 @@
               <i class="fa fa-trophy"></i>
               <div class="round-details">Finals <br /></div>
               <ul class="matchup championship">
-                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
-                <li class="team team-top group-details"><a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Petite<a href=""><span class="score"></span></a></li>
+                <li class="team team-top group-details">Team Red Heads<a href=""><span class="score"></span></a></li>
               </ul>
             </div>
             <div class="semis-r current">
