--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -75,6 +75,10 @@
     </section>
     <div class="container">
       <div>
+        <h2 class="final-winner">CHAMPIONS: Team Petite </h2>
+      </div>
+      <hr class="ruler">
+      <div>
         <p class="info">Twenty unqiue teams composed of various celebrities will battle against each other to decide which team has the hottest celebs. The teams were chosen by the users of the subreddit in a <a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rsbcdz/nominations_for_the_next_tournament_team_battles/" target="_blank">nomination thread</a></p>
       </div>
       <div class="info">TEAMS - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/teams" target="_blank">/teambattles/teams</a></div>
