under 25 initial commit

--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -65,6 +65,7 @@
                             <li><a href="https://celebbattles.github.io/tournaments/underrated">Hottest Underrated Celeb</a></li>
                             <li><a href="https://celebbattles.github.io/tournaments/yogapants">Best Butt in Yoga Pants</a></li>
                             <li><a href="https://celebbattles.github.io/tournaments/teambattles">Team Battles</a></li>
+                            <li><a href="https://celebbattles.github.io/tournaments/under25">Hottest Celeb Under 25</a></li>
                         </ul>
                     </li>
                 </ul>
